[package]
name = "kilter"
version = "0.1.1"
edition = "2021"
description = "A high-performance rate limiting reverse proxy built on Pingora"
license = "MIT"
repository = "https://github.com/tpyo/kilter"
homepage = "https://github.com/tpyo/kilter"
readme = "README.md"
keywords = ["proxy", "rate-limiting", "reverse-proxy", "pingora", "redis"]
categories = ["network-programming", "web-programming"]

[dependencies]
pingora = "0.8.0"
pingora-proxy = "0.8.0"
pingora-load-balancing = "0.8.0"
redis = { version = "1.2.1", features = ["tokio-comp", "connection-manager"] }
ron = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "macros",
] }
reqwest = { version = "0.13.3", features = ["json"] }
regex = "1.12.3"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = [
    "registry",
    "env-filter",
    "json",
] }
tracing-logfmt = "0.3"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
    "grpc-tonic",
    "http-proto",
    "trace",
] }
tracing-opentelemetry = "0.32"
async-trait = "0.1.89"
url = "2.5.8"
mimalloc = "0.1.49"
num_cpus = "1.17.0"
prometheus = "0.14.0"
hyper = { version = "1.9.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
http-body-util = "0.1.3"
serde_json = "1"

[dev-dependencies]
uuid = { version = "1.23.1", features = ["v4"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
